--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "express": "^4.17.1"
+    "axios": "^0.23.0",
+    "express": "^4.17.1",
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2"
   }
 }
