Set up API folder

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DB_PORT=5432
 
 
 Steps to set up PSQL: 
-psql -U <user>
 CREATE USER <username> WITH encrypted password 'password';
 CREATE DATABASE <database name>
+psql -U <user> <--- to confirm the user is set up
 psql -U <user> <database name> (take you straight to the database under this username)
