--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
+  "name": "skinfax",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./skinfax_api/server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MavFeuille/SkinFax.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MavFeuille/SkinFax/issues"
+  },
+  "homepage": "https://github.com/MavFeuille/SkinFax#readme",
   "dependencies": {
-    "axios": "^0.23.0",
-    "express": "^4.17.1",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1"
   }
 }
