--- a/server/package.json
+++ b/server/package.json
@@ -19,10 +19,10 @@
   },
   "homepage": "https://github.com/MavFeuille/SkinFax#readme",
   "dependencies": {
+    "chalk": "^2.4.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.7.1",
-    "pg-native": "^3.0.0",
-    "chalk": "^2.4.2"
+    "pg-native": "^3.0.0"
   }
 }
