--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/server.js",
+    "start": "./node_modules/.bin/nodemon -L ./src/server.js",
     "db:reset": "node bin/resetdb.js"
   },
   "repository": {
@@ -24,5 +24,8 @@
     "express": "^4.17.1",
     "pg": "^8.7.1",
     "pg-native": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.14"
   }
 }
