--- a/server/.env.example
+++ b/server/.env.example
@@ -7,6 +7,12 @@ DB_NAME=skinfax
 DB_PORT=5432
 
 
+CLOUDINARY_URL=cloudinary://my_key:my_secret@my_cloud_name
+CLOUDINARY_CLOUD_NAME=cloud_name
+CLOUDINARY_API_KEY=key
+CLOUDINARY_API_SECRET=secret
+
+
 Steps to set up PSQL: 
 CREATE USER <username> WITH encrypted password 'password';
 CREATE DATABASE <database name>
