--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/MavFeuille/SkinFax#readme",
   "dependencies": {
     "chalk": "^2.4.2",
+    "cloudinary": "^1.27.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.7.1",
