--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,15 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
     "node-sass": "^6.0.1",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-emoji": "^0.5.0",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "4.0.3",
+    "react-scroll-to-bottom": "^4.2.0",
+    "socket.io": "^4.3.1",
+    "socket.io-client": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
