--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^8.7.1",
-    "pg-native": "^3.0.0"
+    "pg-native": "^3.0.0",
+    "socket.io": "^4.3.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
