--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "skinfax",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8000/",
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@cloudinary/react": "*",
     "@cloudinary/url-gen": "^1.1.0",
@@ -10,6 +10,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.6.1",
     "cloudinary-react": "^1.7.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
