--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/MavFeuille/SkinFax#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "chalk": "^2.4.2",
     "cloudinary": "^1.27.1",
     "dotenv": "^10.0.0",
