--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,12 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
-    "bootstrap-icons": "^1.6.1",
     "cloudinary-react": "^1.7.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3"
   },
   "scripts": {
