--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.23.0",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "cloudinary-react": "^1.7.0",
     "node-sass": "^6.0.1",
     "query-string": "^7.0.1",
